--- a/src/aboutme.css
+++ b/src/aboutme.css
@@ -38,7 +38,7 @@ a:visited {
 }
 
 .plants {
-  font-size: 30px;
+  font-size: 20px;
   flex: 1;
   display: flex;
   justify-content: flex-end;
@@ -53,7 +53,7 @@ img {
 }
 
 .weatherapp {
-  font-size: 30px;
+  font-size: 20px;
   flex: 1;
   display: flex;
   justify-content: flex-start;
@@ -64,10 +64,10 @@ img {
 }
 
 .portfolio {
-  font-size: 30px;
+  font-size: 20px;
   flex: 1;
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   padding: 10px;
   border: 5px solid #f7f0ff;
   background-color: #f7f0ff;
