--- a/src/aboutme.css
+++ b/src/aboutme.css
@@ -41,15 +41,20 @@ a:visited {
   font-size: 20px;
   flex: 1;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   padding: 10px;
   border: 5px solid #f7f0ff;
   background-color: #f7f0ff;
-  border-radius: 20px 20px 20px 20px;
+  border-radius: 10px 10px 10px 10px;
 }
 
-img {
+.plantsimg {
   width: 300px;
+  padding: 20px;
+}
+.weatherappimg {
+  width: 300px;
+  padding: 20px;
 }
 
 .weatherapp {
@@ -78,14 +83,20 @@ img {
   display: block;
   margin: 30px auto;
   padding: 20px;
-  width: 150px;
+  width: 400px;
 }
 
 @media (max-width: 400px) {
   h2 {
     display: none;
   }
+  .portfoliofolder {
+    display: none;
+  }
   img {
-    width: 400px;
+    display: none;
+  }
+  .weatherappimg {
+    display: none;
   }
 }
